--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -19,6 +19,7 @@
     "^react$",
     "^react-dom$",
     "<THIRD_PARTY_MODULES>",
+    "^@/app/(.*)$",
     "^@/components/(.*)$",
     "^@/hooks/(.*)$",
     "^@/lib/(.*)$",
