--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -1,5 +1,5 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:9999/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:9999
 NEXT_PUBLIC_SOCKET_URL=http://localhost:9999
 
 # App Configuration
