--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.15.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
